@@ -21,7 +21,6 @@ import ch.jalu.configme.SettingsManager;
 import ch.jalu.configme.SettingsManagerBuilder;
 import ch.jalu.injector.Injector;
 import lombok.Getter;
-import net.kyori.adventure.text.minimessage.tag.resolver.Placeholder;
 import net.skinsrestorer.api.SkinsRestorer;
 import net.skinsrestorer.api.SkinsRestorerProvider;
 import net.skinsrestorer.api.connections.MineSkinAPI;
@@ -31,16 +30,14 @@ import net.skinsrestorer.api.storage.CacheStorage;
 import net.skinsrestorer.api.storage.PlayerStorage;
 import net.skinsrestorer.api.storage.SkinStorage;
 import net.skinsrestorer.builddata.BuildData;
-import net.skinsrestorer.shared.api.PlatformWrapper;
 import net.skinsrestorer.shared.api.SharedSkinApplier;
 import net.skinsrestorer.shared.api.SharedSkinsRestorer;
 import net.skinsrestorer.shared.api.SkinApplierAccess;
 import net.skinsrestorer.shared.api.event.EventBusImpl;
-import net.skinsrestorer.shared.commands.ProxyGUICommand;
+import net.skinsrestorer.shared.commands.GUICommand;
 import net.skinsrestorer.shared.commands.SRCommand;
-import net.skinsrestorer.shared.commands.ServerGUICommand;
 import net.skinsrestorer.shared.commands.SkinCommand;
-import net.skinsrestorer.shared.commands.library.CommandManager;
+import net.skinsrestorer.shared.commands.library.SRCommandManager;
 import net.skinsrestorer.shared.config.*;
 import net.skinsrestorer.shared.connections.MineSkinAPIImpl;
 import net.skinsrestorer.shared.connections.MojangAPIImpl;
@@ -51,19 +48,14 @@ import net.skinsrestorer.shared.floodgate.FloodgateUtil;
 import net.skinsrestorer.shared.log.SRChatColor;
 import net.skinsrestorer.shared.log.SRLogger;
 import net.skinsrestorer.shared.storage.CacheStorageImpl;
-import net.skinsrestorer.shared.storage.CooldownStorage;
 import net.skinsrestorer.shared.storage.PlayerStorageImpl;
 import net.skinsrestorer.shared.storage.SkinStorageImpl;
 import net.skinsrestorer.shared.storage.adapter.AdapterReference;
 import net.skinsrestorer.shared.storage.adapter.file.FileAdapter;
 import net.skinsrestorer.shared.storage.adapter.mysql.MySQLAdapter;
 import net.skinsrestorer.shared.storage.adapter.mysql.MySQLProvider;
-import net.skinsrestorer.shared.subjects.SRPlayer;
-import net.skinsrestorer.shared.subjects.SRProxyPlayer;
-import net.skinsrestorer.shared.subjects.messages.Message;
+import net.skinsrestorer.shared.subjects.SRSubjectWrapper;
 import net.skinsrestorer.shared.subjects.messages.MessageLoader;
-import net.skinsrestorer.shared.subjects.messages.SkinsRestorerLocale;
-import net.skinsrestorer.shared.subjects.permissions.PermissionRegistry;
 import net.skinsrestorer.shared.update.UpdateCheckInit;
 import net.skinsrestorer.shared.utils.MetricsCounter;
 import net.skinsrestorer.shared.utils.ReflectionUtil;
@@ -80,15 +72,12 @@ import java.nio.file.StandardCopyOption;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
-import java.util.concurrent.TimeUnit;
 
 public class SRPlugin {
-    private static final String USER_AGENT = "SkinsRestorer/%s (%s)";
     @Getter
     private static final boolean unitTest = System.getProperty("sr.unit.test") != null;
-    private final SRPlatformAdapter<?, ?> adapter;
+    private static final String LOADED_PROPERTY = "sr.jvm.loaded";
+    private final SRPlatformAdapter adapter;
     private final SRLogger logger;
     @Getter
     private final Path dataFolder;
@@ -110,15 +99,7 @@ public class SRPlugin {
     }
 
     public void initCommands() {
-        CommandManager<?> manager = new CommandManager<>(adapter, logger,
-                injector.getSingleton(SkinsRestorerLocale.class),
-                injector.getSingleton(SettingsManager.class));
-        injector.register(CommandManager.class, manager);
-
-        registerConditions(manager);
-
-        adapter.runRepeatAsync(injector.getSingleton(CooldownStorage.class)::cleanup, 60, 60, TimeUnit.SECONDS);
-
+        SRCommandManager manager = injector.getSingleton(SRCommandManager.class);
         manager.registerCommand(injector.newInstance(SRCommand.class));
 
         SettingsManager settings = injector.getSingleton(SettingsManager.class);
@@ -127,63 +108,8 @@ public class SRPlugin {
         }
 
         if (!settings.getProperty(CommandConfig.DISABLE_GUI_COMMAND)) {
-            if (injector.getIfAvailable(SRServerPlugin.class) != null) {
-                manager.registerCommand(injector.newInstance(ServerGUICommand.class));
-            } else if (injector.getIfAvailable(SRProxyPlugin.class) != null) {
-                manager.registerCommand(injector.newInstance(ProxyGUICommand.class));
-            } else {
-                throw new IllegalStateException("Unknown platform");
-            }
+            manager.registerCommand(injector.newInstance(GUICommand.class));
         }
-    }
-
-    private void registerConditions(CommandManager<?> manager) {
-        SettingsManager settings = injector.getSingleton(SettingsManager.class);
-        CooldownStorage cooldownStorage = injector.getSingleton(CooldownStorage.class);
-
-        manager.registerCondition("allowed-server", sender -> {
-            if (!(sender instanceof SRProxyPlayer proxyPlayer)) {
-                return true;
-            }
-
-            if (!settings.getProperty(ProxyConfig.NOT_ALLOWED_COMMAND_SERVERS_ENABLED)) {
-                return true;
-            }
-
-            Optional<String> optional = proxyPlayer.getCurrentServer();
-            if (optional.isEmpty()) {
-                if (!settings.getProperty(ProxyConfig.NOT_ALLOWED_COMMAND_SERVERS_IF_NONE_BLOCK_COMMAND)) {
-                    sender.sendMessage(Message.NOT_CONNECTED_TO_SERVER);
-                    return false;
-                }
-
-                return true;
-            }
-
-            String server = optional.get();
-            boolean inList = settings.getProperty(ProxyConfig.NOT_ALLOWED_COMMAND_SERVERS).contains(server);
-            boolean shouldBlock = settings.getProperty(ProxyConfig.NOT_ALLOWED_COMMAND_SERVERS_ALLOWLIST) != inList;
-
-            if (shouldBlock) {
-                sender.sendMessage(Message.COMMAND_SERVER_NOT_ALLOWED_MESSAGE, Placeholder.unparsed("server", server));
-                return false;
-            }
-
-            return true;
-        });
-
-        manager.registerCondition("cooldown", sender -> {
-            if (sender instanceof SRPlayer player) {
-                UUID senderUUID = player.getUniqueId();
-                if (!sender.hasPermission(PermissionRegistry.BYPASS_COOLDOWN) && cooldownStorage.hasCooldown(senderUUID)) {
-                    sender.sendMessage(Message.SKIN_COOLDOWN, Placeholder.parsed("time", String.valueOf(cooldownStorage.getCooldownSeconds(senderUUID))));
-
-                    return false;
-                }
-            }
-
-            return true;
-        });
     }
 
     public void loadConfig() {
@@ -242,8 +168,8 @@ public class SRPlugin {
             }
         }
 
-        if (!settings.getProperty(GUIConfig.CUSTOM_GUI_ENABLED)) {
-            settings.setProperty(GUIConfig.CUSTOM_GUI_ONLY, false);
+        if (!settings.getProperty(CommandConfig.PER_SKIN_PERMISSIONS_CONSENT).equalsIgnoreCase(CommandConfig.CONSENT_MESSAGE)) {
+            logger.warning("You must agree to the rules at '%s' in the config to use per skin permissions.".formatted(CommandConfig.PER_SKIN_PERMISSIONS_CONSENT.getPath()));
         }
 
         if (!settings.getProperty(ServerConfig.DISMOUNT_PLAYER_ON_UPDATE)) {
@@ -273,15 +199,15 @@ public class SRPlugin {
             return;
         }
 
-        logger.info("Moving old file " + path.getFileName() + " to archive folder.");
+        logger.info("Moving old file %s to archive folder.".formatted(path.getFileName()));
         Path archive = dataFolder.resolve("archive");
         Path target = archive.resolve(path.getFileName().toString() + "_" + SRHelpers.getEpochSecond());
 
         try {
-            Files.createDirectories(archive);
+            SRHelpers.createDirectoriesSafe(archive);
             Files.move(path, target, StandardCopyOption.REPLACE_EXISTING);
         } catch (IOException e) {
-            logger.warning("Failed to move old file " + path.getFileName() + " to archive folder.", e);
+            logger.warning("Failed to move old file %s to archive folder.".formatted(path.getFileName()), e);
         }
     }
 
@@ -334,7 +260,7 @@ public class SRPlugin {
         injector.register(SkinsRestorer.class, api);
     }
 
-    public <P> void registerSkinApplier(SkinApplierAccess<P> skinApplier, Class<P> playerClass, PlatformWrapper<P> platformWrapper) {
+    public <P> void registerSkinApplier(SkinApplierAccess<P> skinApplier, Class<P> playerClass, SRSubjectWrapper<?, P, ?> platformWrapper) {
         SharedSkinApplier<P> sharedSkinApplier = new SharedSkinApplier<>(playerClass, skinApplier, platformWrapper,
                 injector.getSingleton(PlayerStorageImpl.class), injector.getSingleton(SkinStorageImpl.class), injector);
         injector.register(SharedSkinApplier.class, sharedSkinApplier);
@@ -342,6 +268,10 @@ public class SRPlugin {
     }
 
     public void registerMetrics(Object metricsParent) {
+        if (metricsParent == null) {
+            return;
+        }
+
         MetricsBase metrics;
         try {
             Field field = metricsParent.getClass().getDeclaredField("metricsBase");
@@ -363,6 +293,12 @@ public class SRPlugin {
     }
 
     public void startup(Class<? extends SRPlatformInit> initClass) throws Exception {
+        if (Boolean.getBoolean(LOADED_PROPERTY)) {
+            logger.severe("SkinsRestorer was already loaded in this JVM. You must've used a plugin like PlugMan to reload it. This is not supported and will cause issues with the plugin! Please restart your server to reload the plugin properly.");
+        } else {
+            System.setProperty(LOADED_PROPERTY, "true");
+        }
+
         SRServerPlugin serverPlugin = injector.getIfAvailable(SRServerPlugin.class);
         SRProxyPlugin proxyPlugin = injector.getIfAvailable(SRProxyPlugin.class);
 
@@ -392,9 +328,9 @@ public class SRPlugin {
         injector.register(PlayerStorage.class, injector.getSingleton(PlayerStorageImpl.class));
 
         SRPlatformInit platformInit = injector.newInstance(initClass);
-        platformInit.initSkinApplier();
-
         platformInit.checkPluginSupport();
+
+        platformInit.initSkinApplier();
 
         platformInit.prePlatformInit();
 
@@ -426,14 +362,14 @@ public class SRPlugin {
     private void runJavaCheck() {
         try {
             int version = SRHelpers.getJavaVersion();
-            if (version >= 17) {
-                return;
+            if (version < 17) {
+                logger.warning(SRChatColor.YELLOW + "You are running an outdated Java version, please update it to at least Java 21 (your version is %d).".formatted(version));
+                logger.warning(SRChatColor.YELLOW + "SkinsRestorer no longer officially supports this version of Java, you are currently using an unsupported compatibility build.");
+                logger.warning(SRChatColor.YELLOW + "You can still use the plugin, but you may encounter issues that are not present in newer versions of Java.");
+            } else if (version < 21) {
+                logger.warning(SRChatColor.YELLOW + "Please update your Java runtime to at least Java 21 (your version is %d).".formatted(version));
+                logger.warning(SRChatColor.YELLOW + "At some point in the future, SkinsRestorer will no longer be compatible with this version of Java.");
             }
-
-            logger.warning(SRChatColor.YELLOW + "Your Java version \"" + version + "\" is not supported! SkinsRestorer now uses Java 17 primarily.");
-            logger.warning(SRChatColor.YELLOW + "The plugin was \"downgraded\" to Java 1.8 (Java 8) to ensure compatibility with your server, but it may cause issues.");
-            logger.warning(SRChatColor.YELLOW + "The plugin still works, but it may have Java version related issues.");
-            logger.warning(SRChatColor.YELLOW + "Please update your server Java version to 17 or higher to get the best performance, security and to avoid issues with SkinsRestorer.");
         } catch (Exception e) {
             logger.warning("Failed to parse Java version.", e);
         }
@@ -450,7 +386,7 @@ public class SRPlugin {
     }
 
     public String getUserAgent() {
-        return String.format(USER_AGENT, BuildData.VERSION, adapter.getPlatform());
+        return "SkinsRestorer/%s (%s)".formatted(BuildData.VERSION, adapter.getPlatform());
     }
 
     public void shutdown() {
