@@ -23,15 +23,14 @@ import net.skinsrestorer.shared.log.SRLogger;
 import net.skinsrestorer.shared.plugin.SRPlatformAdapter;
 import net.skinsrestorer.shared.plugin.SRPlugin;
 import net.skinsrestorer.shared.utils.LocaleParser;
+import net.skinsrestorer.shared.utils.SRHelpers;
 import net.skinsrestorer.shared.utils.TranslationReader;
 
 import javax.inject.Inject;
 import java.io.IOException;
-import java.io.InputStream;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.StandardCopyOption;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
@@ -40,7 +39,7 @@ import java.util.Optional;
 public class MessageLoader {
     private final SRPlugin plugin;
     private final LocaleManager manager;
-    private final SRPlatformAdapter<?, ?> adapter;
+    private final SRPlatformAdapter adapter;
     private final SRLogger logger;
 
     public void loadMessages() throws IOException {
@@ -51,32 +50,30 @@ public class MessageLoader {
         manager.verifyValid();
     }
 
-    private void loadDefaultMessages() throws IOException {
+    private void loadDefaultMessages() {
         for (String localeFile : BuildData.LOCALES) {
-            String resourcePath = "locales/" + localeFile;
+            String resourcePath = "locales/%s".formatted(localeFile);
             Locale locale = getTranslationLocale(localeFile);
 
             int count = 0;
-            try (InputStream is = adapter.getResource(resourcePath)) {
-                for (Map.Entry<String, String> entry : TranslationReader.readJsonTranslation(is).entrySet()) {
-                    var message = Message.fromKey(entry.getKey());
-                    if (message.isEmpty() && locale != LocaleManager.BASE_LOCALE) {
-                        continue;
-                    }
-
-                    manager.addMessage(
-                            message
-                                    .orElseThrow(() -> new IllegalArgumentException(
-                                            String.format("No message enum found for key %s", entry.getKey())
-                                    )),
-                            locale,
-                            entry.getValue()
-                    );
-                    count++;
+            for (Map.Entry<String, String> entry : TranslationReader.readJsonTranslation(adapter.getResouceAsString(resourcePath)).entrySet()) {
+                var message = Message.fromKey(entry.getKey());
+                if (message.isEmpty() && locale != LocaleManager.BASE_LOCALE) {
+                    continue;
                 }
+
+                manager.addMessage(
+                        message
+                                .orElseThrow(() -> new IllegalArgumentException(
+                                        "No message enum found for key %s".formatted(entry.getKey())
+                                )),
+                        locale,
+                        entry.getValue()
+                );
+                count++;
             }
 
-            logger.debug(String.format("Loaded %d default message strings for locale %s", count, locale));
+            logger.debug("Loaded %d default message strings for locale %s".formatted(count, locale));
         }
     }
 
@@ -85,16 +82,14 @@ public class MessageLoader {
         Path repositoryFolder = localesFolder.resolve("repository");
         Path customFolder = localesFolder.resolve("custom");
 
-        Files.createDirectories(repositoryFolder);
-        Files.createDirectories(customFolder);
+        SRHelpers.createDirectoriesSafe(repositoryFolder);
+        SRHelpers.createDirectoriesSafe(customFolder);
 
         for (String localeFile : BuildData.LOCALES) {
-            String resourcePath = "locales/" + localeFile;
+            String resourcePath = "locales/%s".formatted(localeFile);
             Path filePath = repositoryFolder.resolve(localeFile);
 
-            try (InputStream is = adapter.getResource(resourcePath)) {
-                Files.copy(is, filePath, StandardCopyOption.REPLACE_EXISTING);
-            }
+            SRHelpers.writeIfNeeded(filePath, adapter.getResouceAsString(resourcePath));
         }
 
         try (DirectoryStream<Path> stream = Files.newDirectoryStream(customFolder)) {
@@ -122,20 +117,18 @@ public class MessageLoader {
                 Locale locale = getTranslationLocale(fileName);
 
                 int count = 0;
-                try (InputStream is = Files.newInputStream(path)) {
-                    for (Map.Entry<String, String> entry : TranslationReader.readJsonTranslation(is).entrySet()) {
-                        Optional<Message> message = Message.fromKey(entry.getKey());
-                        if (message.isEmpty()) {
-                            logger.warning("Skipping unknown message key " + entry.getKey());
-                            continue;
-                        }
-
-                        manager.addMessage(message.get(), locale, entry.getValue());
-                        count++;
+                for (Map.Entry<String, String> entry : TranslationReader.readJsonTranslation(Files.readString(path)).entrySet()) {
+                    Optional<Message> message = Message.fromKey(entry.getKey());
+                    if (message.isEmpty()) {
+                        logger.warning("Skipping unknown message key %s".formatted(entry.getKey()));
+                        continue;
                     }
+
+                    manager.addMessage(message.get(), locale, entry.getValue());
+                    count++;
                 }
 
-                logger.debug(String.format("Loaded %d custom message strings for locale %s", count, locale));
+                logger.debug("Loaded %d custom message strings for locale %s".formatted(count, locale));
             }
         }
     }
